# MentalMathTeaser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
src/mental_math_teaser/: main.py  multiply_five_trick.py  trick_base.py
tests/: test_main.py  test_multiply_five_trick.py  test_trick_base.py
